2003 Jan 22

    * STEnvironment: added includeBundle: method

2003 Jan 22

    * STModule: removed
    * STBundleInfo: added new class STBundleInfo and additional methods to 
    NSBundle
    * STEnvironment: reflect change from STModule to NSBundle/STBundleInfo;
    * Modules/*: reflect change from STModule to NSBundle/STBundleInfo

    IMPORTANT NOTE: You have to rebuild all modules, because the format has
    changed.

2003 Jan 22

    * NSNumber+additions: Added -modulo: method.
    * Foundation bundle: added NSFileManager extensions; added missing constants
    * Documentation/Additions.txt: new file
   
2003 Jan 20

    * GNUMakefile: Removed inclusion of source-distribution.make, as it is
    not needed (suggested by Nicola Pero <nicola@brainstorm.co.uk>)
    * Examples/Developer: new directory containing developer examples
    
2003 Jan 15

    * GDL2: added installation of GDL2.stenv
    * Documentation/Tools.txt: new file documenting steptalk tools

2002 Dec 25
    
    * Version 0.6.2

2002 Dec 21

    * Languages/GNUmakefile, Modules/GNUmakefile, Finders/GNUmakefile: removed
    forced installation to the GNUSTEP_USER_ROOT. ~/Library/StepTalk/* should
    be deleted.
    * Documentation/Modules.txt: added

2002 Nov 29

    * Added GDL2 module
    * STModule: more details on module loading fault

2002 Nov 11
    
    * ObjectiveC module: added selectorsContainingString: and
    implementorsOfSelector:

2002 Nov 5

    * Added MyLanguage as empty example language bundle

2002 Sep 17
    
    * Patch from Jeff Teunissen <deek@d2dc.net> with various bug-fixes
    * Added .cvsignore files
    
2002 Sep 15

    * Version 0.6.1

2002 Sep 15

    * Modules/AppKit/AppKitConstants.list: commented out undefined constants
    
2002 Sep 7

    * Modules/AppKit/AppKitInfo.plist: added NSSound class
    
2002 Aug 27

    * Source/*.m: Cleanup to remove compiler warnings.
    
2002 Jun 18

    * STScript: new class (from AppTalk)