@@ -1,0 +1,146 @@
+{
+    STScriptingInfoClass = STAppKitModule;
+    
+    STClasses = 
+    (
+        NSActionCell,
+        NSAffineTransform,
+        NSApplication,
+        NSAttributedString,
+        NSBezierPath,
+        NSBitmapImageRep,
+        NSBox,
+        NSBrowser,
+        NSBrowserCell,
+        NSBundle,
+        NSButton,
+        NSButtonCell,
+        NSCachedImageRep,
+        NSCell,
+        NSClipView,
+        NSCoder,
+        NSColor,
+        NSColorList,
+        NSColorPanel,
+        NSColorPicker,
+        NSColorWell,
+        NSComboBox,
+        NSComboBoxCell,
+        NSControl,
+        NSCursor,
+        NSCustomImageRep,
+        NSDataLink,
+        NSDataLinkManager,
+        NSDataLinkPanel,
+        NSDocument,
+        NSDocumentController,
+        NSDrawer,
+        NSEPSImageRep,
+        NSEvent,
+        NSFileWrapper,
+        NSFont,
+        NSFontManager,
+        NSFontPanel,
+        NSForm,
+        NSFormCell,
+        NSGraphicsContext,
+        NSHelpManager,
+        NSHelpPanel,
+        NSImage,
+        NSImageCell,
+        NSImageRep,
+        NSImageView,
+        NSInputManager,
+        NSInputServer,
+        NSLayoutManager,
+        NSMatrix,
+        NSMenu,
+        NSMenuItem,
+        NSMenuItemCell,
+        NSMenuView,
+        NSMutableAttributedString,
+        NSMutableParagraphStyle,
+        NSNibConnector,
+        NSNibControlConnector,
+        NSNibOutletConnector,
+        NSOpenPanel,
+        NSOutlineView,
+        NSPageLayout,
+        NSPanel,
+        NSParagraphStyle,
+        NSPasteboard,
+        NSPopUpButton,
+        NSPopUpButtonCell,
+        NSPrintInfo,
+        NSPrintOperation,
+        NSPrintPanel,
+        NSPrinter,
+        NSProgressIndicator,
+        NSResponder,
+        NSRulerMarker,
+        NSRulerView,
+        NSSavePanel,
+        NSScreen,
+        NSScrollView,
+        NSScroller,
+        NSSecureTextField,
+        NSSecureTextFieldCell,
+        NSSelection,
+/*        NSSimpleHorizontalTypesetter,*/
+        NSSlider,
+        NSSliderCell,
+        NSSound,
+        NSSpellChecker,
+        NSSpellServer,
+        NSSplitView,
+        NSStepper,
+        NSStepperCell,
+        NSString,
+        NSTabView,
+        NSTabViewItem,
+        NSTableColumn,
+        NSTableHeaderCell,
+        NSTableHeaderView,
+        NSTableView,
+        NSText,
+        NSTextAttachment,
+        NSTextAttachmentCell,
+        NSTextContainer,
+        NSTextField,
+        NSTextFieldCell,
+        NSTextStorage,
+        NSTextTab,
+        NSTextView,
+/*        NSTypesetter,*/
+        NSView,
+        NSWindow,
+        NSWindowController,
+        NSWorkspace
+
+        /*
+
+        GMArchiver,
+        GMModel,
+        GMUnarchiver,
+
+        GSCustomView,
+        GSFontEnumerator,
+        GSFontInfo,
+        GSHbox,
+        GSHelpManagerPanel,
+        GSInfoPanel,
+        GSNibContainer,
+        GSNibItem,
+        GSServicesManager,
+        GSTable,
+        GSTrackingRect,
+        GSVbox,
+
+        IMConnector,
+        IMControlConnector,
+        IMCustomObject,
+        IMCustomView,
+        IMOutletConnector,
+        */
+    );
+}
