@@ -1,0 +1,96 @@
+{
+    STScriptingInfoClass = STFoundationModule;
+    
+    STClasses = (
+
+        GSMimeCodingContext,
+        GSMimeDocument,
+        GSMimeParser,
+        GSMimeHeader,
+
+        GSHTMLParser,
+        GSHTMLSAXHandler,
+        GSSAXHandler,
+        GSXMLAttribute,
+        GSXMLDocument,
+        GSXMLNamespace,
+        GSXMLNode,
+        GSXMLParser,
+
+        NSArchiver,
+        NSArray,
+        NSAssertionHandler,
+        NSAttributedString,
+        NSAutoreleasePool,
+        NSBitmapCharSet,
+        NSBundle,
+        NSCalendarDate,
+        NSCharacterSet,
+        NSClassDescription,
+        NSCoder,
+        NSConditionLock,
+        NSConnection,
+        NSCountedSet,
+        NSData,
+        NSDate,
+        NSDateFormatter,
+        NSDecimalNumber,
+        NSDecimalNumberHandler,
+        NSDeserializer,
+        NSDictionary,
+        NSDirectoryEnumerator,
+        NSDistantObject,
+        NSDistributedLock,
+        NSDistributedNotificationCenter,
+        NSEnumerator,
+        NSException,
+        NSFileHandle,
+        NSFileManager,
+        NSFormatter,
+        NSGDate,
+        NSHost,
+        NSInvocation,
+        NSLock,
+        NSMethodSignature,
+        NSMutableArray,
+        NSMutableAttributedString,
+        NSMutableBitmapCharSet,
+        NSMutableCharacterSet,
+        NSMutableData,
+        NSMutableDictionary,
+        NSMutableSet,
+        NSMutableString,
+        NSNotification,
+        NSNotificationCenter,
+        NSNotificationQueue,
+        NSNull,
+        NSNumber,
+        NSNumberFormatter,
+        NSObject,
+        NSPipe,
+        NSPort,
+        NSPortCoder,
+        NSPortMessage,
+        NSPortNameServer,
+        NSProcessInfo,
+        NSProtocolChecker,
+        NSProxy,
+        NSRecursiveLock,
+        NSRunLoop,
+        NSScanner,
+        NSSerializer,
+        NSSet,
+        NSString,
+        NSTask,
+        NSThread,
+        NSTimeZone,
+        NSTimeZoneDetail,
+        NSTimer,
+        NSURL,
+        NSURLHandle,
+        NSUnarchiver,
+        NSUndoManager,
+        NSUserDefaults,
+        NSValue
+     );
+}
