@@ -1,0 +1,5 @@
+{
+    STScriptingInfoClass = SimpleTranscriptModule;
+    STClasses = (
+    );
+}
